<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btnHelp"
        android:icon="@drawable/ic_help"
        android:title="Help"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/btnRestart"
        android:icon="@drawable/ic_reset_white"
        android:title="Restablecer"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/btnMore"
        android:icon="@drawable/ic_more"
        android:title="Colors"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/iteTransparent"
                android:title="@string/transparent"/>
            <item
                android:id="@+id/iteSemitransparent"
                android:title="@string/semitransparente"/>
            <item
                android:id="@+id/iteOpaque"
                android:title="@string/opaque"/>
            <item
                android:id="@+id/iteYellow"
                android:title="@string/yellow"/>
            <item
                android:id="@+id/iteBlue"
                android:title="@string/blue"/>
            <item
                android:id="@+id/iteRed"
                android:title="@string/red"/>
            <item
                android:id="@+id/iteGreen"
                android:title="@string/green"/>
            <item
                android:id="@+id/iteBrown"
                android:title="@string/brown"/>
            <item
                android:id="@+id/iteBlack"
                android:title="@string/black"/>
            <item
                android:id="@+id/itePink"
                android:title="@string/pink"/>
            <item
                android:id="@+id/itePurple"
                android:title="@string/purple"/>
            <item
                android:id="@+id/iteWhite"
                android:title="@string/white"/>
            <item
                android:id="@+id/iteGray"
                android:title="@string/gray"/>
        </menu>
    </item>

    <item
        android:id="@+id/reset"
        android:title="Reset"
        android:icon="@drawable/ic_reset"
        app:showAsAction="never"/>

    <item
        android:id="@+id/aboutOf"
        android:title="About Of"
        android:icon="@drawable/ic_about"/>

    <item
        android:id="@+id/close"
        android:title="Close app"
        android:icon="@drawable/ic_close"/>

</menu>