<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Help">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <FrameLayout
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@mipmap/help">
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helper"
                android:textAlignment="center"
                android:textColor="#00BCD4"
                android:textSize="36sp"
                android:textStyle="bold"
                app:fontFamily="casual" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/textView6"
                android:text="Para obtener mas informacion acerca de la aplicacion puedes contactarte por los siguientes medios:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#030302"
                android:textSize="18sp" />
        </LinearLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <FrameLayout
                    android:background="@drawable/phone"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/textView8"
                    android:text="@string/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="#030302"
                    android:textSize="18sp"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:id="@+id/textView7"
                    android:text="@string/lblPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:textColor="#030302"
                    android:textSize="18sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <FrameLayout
                    android:background="@drawable/email"
                    android:layout_height="20dp"
                    android:layout_width="20dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/textView10"
                    android:text="@string/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="#030302"
                    android:textSize="18sp"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/lblEmail"
                    android:textAlignment="center"
                    android:textColor="#030302"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <FrameLayout
                    android:background="@drawable/domicile"
                    android:layout_height="20dp"
                    android:layout_width="20dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/textView11"
                    android:text="@string/domicile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="#030302"
                    android:textSize="18sp"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:text="@string/lblDomicile"
                    android:textColor="#030302"
                    android:textSize="18sp"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</RelativeLayout>